# MB_IEC_NEW

./: .gitmodules  CMakeLists.txt  ToDo.txt  partitions.csv  sdkconfig  sdkconfig.old
components/esp-iec60870/: CMakeLists.txt  Kconfig  component.mk  sdkconfig.rename
components/esp-iec60870/common/include/: lib60870_config.h
components/esp-iec60870/controller/: esp_iec_slave.c  esp_iec_slave_serial.c  esp_iec_slave_tcp.c  iec_endianness_utils.c  iecc_serial_slave.c  iecc_serial_slave.h  iecc_slave.h  iecc_tcp_slave.c  iecc_tcp_slave.h
components/esp-iec60870/controller/include/: esp_iec_common.h  esp_iec_slave.h  iec_controller.h  iec_endianness_utils.h  lib60870_config.h
components/esp-iec60870/hal/: CMakeLists.txt
components/esp-iec60870/hal/inc/: hal_socket.h  hal_thread.h  hal_time.h  lib_memory.h
components/esp-iec60870/hal/memory/: lib_memory.c
components/esp-iec60870/iec60870/cs101/: cs101_slave.c
components/esp-iec60870/iec60870/cs104/: cs104_slave.c
components/esp-iec60870/iec60870/link_layer/: link_layer.c  serial_transceiver_ft_1_2.c
components/esp-iec60870/iec_ports/: iec_slave.c
components/esp-iec60870/iec_ports/common/: iec_port_common.h  iec_port_event.c  iec_port_other.c  iec_port_timer.c  iec_transaction.c  iec_transaction.h
components/esp-iec60870/iec_ports/include/: iec_common.h  iec_config.h  iec_frame.h  iec_port_types.h  iec_slave.h  iec_types.h  iec_utils.h
components/esp-iec60870/iec_ports/serial/: iec_port_serial.c  iec_port_serial_common.h
components/esp-iec60870/iec_ports/tcp/: iec_port_tcp_common.h  iec_port_tcp_driver.c  iec_port_tcp_driver.h  iec_port_tcp_slave.c  iec_port_tcp_slave.h  iec_port_tcp_utils.c  iec_port_tcp_utils.h  socket_esp.c
components/esp-iec60870/iec_transports/: iec_transport_common.h
components/esp-iec60870/iec_transports/ser/: iec_ser_slave.c  iec_ser_transport.h
components/esp-iec60870/iec_transports/tcp/: iec_tcp_slave.c  iec_tcp_transport.h
components/esp-iec60870/include/api/: cs101_slave.h  cs104_slave.h
components/esp-iec60870/include/internal/: lib60870_internal.h  link_layer.h
components/eth_connect/: CMakeLists.txt  eth_connect.c
idf_add/: connect.c  esp_eth_phy_rtl8201.c  wifi_connect.c
main/: CMakeLists.txt  Kconfig.projbuild  arch.c  config.c  gpio_drv.c  main.c  switch_ota.c  timer_1ms.c  webserver.c
(+30 files in other folders)
